# diffball

./: .gitignore  LICENSE  Makefile.am  ProjectHome.md  autogen.sh  configure.ac  convert_delta.c  ctest.c  delta_patcher.c  delta_tree.c  diffball.c  differ.c  options.c  options.h  patcher.c  quick_test.c  string-misc.c  string-misc.h  tar.c  tar.h
include/: cfile.h
include/diffball/: adler32.h  api.h  apply-patch.h  bdelta.h  bdiff.h  bit-functions.h  bsdiff.h  command_list.h  dcb-cfh-funcs.h  dcbuffer.h  defs.h  diff-algs.h  errors.h  fdtu.h  formats.h  gdiff.h  hash.h  line-util.h  primes.h  switching.h  tree.h  udiff.h  xdelta1.h
libcfile/: Makefile.am  bz2.c  cfile.c  gzip.c  internal.h  logging.c  lzma.c  multifile.c  noop.c
libdiffball/: Makefile.am  adler32.c  api.c  apply-patch.c  bdelta.c  bdiff.c  bit-functions.c  bsdiff.c  command_list.c  dcb-cfh-funcs.c  dcbuffer.c  diff-algs.c  errors.c  fdtu.c  formats.c  gdiff.c  hash.c  logging.c  primes.c  switching.c  tree.c  xdelta1.c
man/: convert_delta.1  diffball.1  differ.1  patcher.1
